--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Warren Kare
-#logo: assets/img/github.jpg
+logo: assets/img/githubpic.jpg
 #description: text below image
-#show_downloads: false
+show_downloads: false
 theme: jekyll-theme-minimal
