--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Warren Kare
 logo: assets/img/githubpic.png
 #description: text below image
 show_downloads: false
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
