--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Warren Kare
+name: Warren Kare
+title:
 logo: assets/img/githubpic.png
 #description: text below image
 show_downloads: false
