--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-name: Warren Kare
-title:
+title: Warren Kare
 logo: assets/img/githubpic.png
 #description: text below image
 show_downloads: false
